# openclaw-hub

./: .env.example  .gitignore  .startup_state.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  MCP-INTEGRATION.md  MVP-PLAN.md  README.md  SAGE_TEST.md  SECURITY-AUDIT.md  SECURITY-STATUS.md  SECURITY.md  STATUS.md  TEST-RESULTS.md  install-linux.sh  install-macos.sh  install.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  tests.yml
aigateway/: config.py  main.py
aigateway/api/: alerts.py  completions.py  config_status.py  dashboard.py  github.py  images.py  mcp.py  social.py  usage.py  videos.py  workflows.py
aigateway/dashboard/: api_logger.py  crypto.py  data.py
aigateway/github/: __init__.py  client.py
aigateway/images/: __init__.py  generator.py  video_generator.py
aigateway/mcp/: manager.py
aigateway/monitoring/: __init__.py  alert_manager.py  health_monitor.py
docs/: AI-AGENT-DISCOVERY.md  CREATE-RELEASE-GUIDE.md  DASHBOARD-SPEC.md  GITHUB-INTEGRATION.md  INSTALLATION.md  MCP-INTEGRATION.md  MVP-PLAN.md  OPEN-SOURCE-CHECKLIST.md  README.md  SECURITY-AUDIT.md  SECURITY-FIX-SUMMARY.md  SECURITY-STATUS.md  STATUS.md  TEST-RESULTS.md  dashboard-prototype.jsx
examples/: web-research.yaml
scripts/: install-linux.sh  install-macos.sh  install.sh  uninstall.sh
tests/: README.md  test_routing.sh  test_server.py
workflows/: README.md  smart-analysis.yaml  summarize.yaml
(+19 files in other folders)
